kubernetes/services/grocy.yml
---
apiVersion: v1
kind: Service
metadata:
  name: grocy
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: grocy

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grocy
  namespace: default
spec:
  tls:
    - hosts:
        - grocy.${DOMAIN_NAME}
      secretName: ${DOMAIN_NAME}-tls
  rules:
    - host: grocy.${DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grocy
                port:
                  name: web

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grocy
  namespace: default
  labels:
    app: grocy
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@weekly"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grocy
  template:
    metadata:
      labels:
        app: grocy
    spec:
      affinity:
        nodeAffinity:
          # Only on NAS nodes
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: nas
                    operator: In
                    values:
                      - "true"
      containers:
        - name: app
          image: lscr.io/linuxserver/grocy:4.2.0
          resources:
            requests:
              memory: 128Mi
              cpu: 250m
            limits:
              memory: 8Gi
              cpu: 4000m
          ports:
            - name: web
              containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          hostPath:
            path: /storage/grocy/config
